--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "firebase": "^11.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0",
     "react-router": "^7.6.3",
+    "sweetalert2": "^11.22.2",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
