--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router": "^7.6.3",
+    "react-star-ratings": "^2.3.0",
     "sweetalert2": "^11.22.2",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
