--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router": "^7.6.3",
     "react-star-ratings": "^2.3.0",
