updated admin dashbaord

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router": "^7.6.3",
     "react-star-ratings": "^2.3.0",
+    "recharts": "^3.1.0",
     "sweetalert2": "^11.22.2",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
