--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-loader-spinner": "^6.1.6",
     "react-rating-stars-component": "^2.2.0",
     "react-router": "^7.6.3",
     "react-star-ratings": "^2.3.0",
