--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^7.4.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.81.5",
+    "antd": "^5.27.0",
     "aos": "^2.3.4",
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
